# routes/course_progress.routes.js
@@ -5,6 +5,7 @@ const {
   createCourseProgress,
   getCourseProgressByLogin,
   getCourseProgressById,
+  updateIsDone
 } = require('../controllers/course-progres.controller');
 
 router.get('/', getAllCourseProgress); //DONE
@@ -12,6 +13,7 @@ router.post('/', createCourseProgress); //DONE
 
 // BY LOGIN
 router.get('/myProgress', restrict, getCourseProgressByLogin); //DONE
+router.put('/progress',restrict, updateIsDone)
 
 // BY ID
 router.get('/:course_progres_id', getCourseProgressById); //DONE
